yaml/kubia-svc-multi-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-multi
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: https
    port: 900
    targetPort: 8443
  selector:
    app: kubia
